--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "postinstall": "node check-mysqldump.js"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.395.0",
     "chalk": "^5.3.0",
     "cli-table3": "^0.6.3",
     "commander": "^11.0.0",
